[package]
name = "vsort"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "GNU Version Sort Rust implementation"
repository = "https://github.com/juansc/vsort/"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"
rand = "0.8.4"
test-case = "3.1.0"

[[bench]]
name = "benchmark"
harness = false